# watt-sampler

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SETUP.md
.github/workflows/: ci.yml
docs/: wattlint_build_prompt.md  wattlint_implementation_plan.md
src/: amd_rapl.rs  diff.rs  gpu.rs  main.rs  normalizer.rs  rapl.rs  report.rs  runner.rs
