[package]
name = "watt-sampler"
version = "0.1.0"
edition = "2021"
description = "Energy measurement CLI using hardware performance counters"

[dependencies]
nvml-wrapper = "0.10"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
nix = { version = "0.29", features = ["process", "sched"] }

[profile.release]
opt-level = 3
lto = true
strip = true
